<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/rounde_dua"
        android:fontFamily="@font/baloo_tamma"
        android:gravity="center"
        android:text="@string/guide"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ScrollView
        android:layout_width="392dp"
        android:layout_height="695dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFF9C4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="Rewards of Fasting"
                android:textColor="@color/black"
                android:textSize="24sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:gravity="start"
                android:text="@string/rewards"
                android:textColor="@color/black"
                android:textSize="19sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="Who should Fast?"
                android:textColor="@color/black"
                android:textSize="24sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:gravity="start"
                android:text="@string/fast_who"
                android:textColor="@color/black"
                android:textSize="19sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="Suhoor is Simple"
                android:textColor="@color/black"
                android:textSize="24sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:gravity="start"
                android:text="@string/suhoor"
                android:textColor="@color/black"
                android:textSize="19sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="Do not Delay the Iftar"
                android:textColor="@color/black"
                android:textSize="24sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:gravity="start"
                android:text="@string/delay_iftar"
                android:textColor="@color/black"
                android:textSize="19sp"></TextView>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>